--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ resultados_pre_pesquisa/2023-08-25T17:06:38/X_dataframe_*
 __pycache__/
 .mypy_cache/
 .ipynb_checkpoints/
+
+agg_function_periodic_dataset/
